[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/fonts/ariblk.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/AppInstaller.gd" type="Script" id=2]
[ext_resource path="res://resources/presets/GeneralButton.tres" type="Theme" id=4]
[ext_resource path="res://resources/presets/FileDialog.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="AppInstaller" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.74902, 0.74902, 0.74902, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.012
anchor_top = 0.022
anchor_right = 0.987
anchor_bottom = 0.989
margin_left = 0.639999
margin_top = 0.16
margin_right = 0.640015
margin_bottom = -0.0800171
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1248.0
margin_bottom = 696.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1248.0
margin_bottom = 665.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 1248.0
margin_bottom = 665.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleCenter" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1248.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TitleCenter"]
margin_left = 498.0
margin_right = 750.0
margin_bottom = 30.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Trying something new?"

[node name="MainContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 1248.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer"]
margin_left = 563.0
margin_right = 684.0
margin_bottom = 70.0

[node name="Apps" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/VBoxContainer"]
margin_right = 121.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Install" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/VBoxContainer/Apps"]
margin_right = 121.0
margin_bottom = 27.0
theme = ExtResource( 4 )
text = "Install App(s)"

[node name="Refresh" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/VBoxContainer/Apps"]
margin_top = 31.0
margin_right = 121.0
margin_bottom = 58.0
theme = ExtResource( 4 )
text = "Refresh Apps"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 121.0
margin_bottom = 66.0

[node name="InstalledApps" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 121.0
margin_bottom = 70.0

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 669.0
margin_right = 1248.0
margin_bottom = 696.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "BlockyOS App Installer | Blockyheadman
Powered Pridefully by Godot Game Engine"
align = 1
autowrap = true

[node name="AppSelector" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
theme = ExtResource( 5 )
window_title = "Set Background Picture"
mode_overrides_title = false
mode = 1
access = 2
filters = PoolStringArray( "*.pck ; App Files" )

[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/VBoxContainer/Apps/Install" to="." method="_on_Install_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/VBoxContainer/Apps/Refresh" to="." method="_on_Refresh_pressed"]
[connection signal="files_selected" from="AppSelector" to="." method="_on_AppSelector_files_selected"]
